@@ -10,6 +10,7 @@ procps-ng-NEXT
   * w: Add --pids option                                   merge #159
   * watch: Pass through beep                               issue #104
   * watch: -r option to not re-exec on SIGWINCH            merge #125
+  * watch: find eol with --no-linewrap                     merge #157
 
 procps-ng-4.0.2
 ---------------
